# lizhe-learnGPU

./: .gitignore  CMakeLists.txt  README.md  run.bat
Lecture0_Philosophy/: CMakeLists.txt
Lecture0_Philosophy/doc/: enUS.md  zhCN.md
Lecture0_Philosophy/src/: hello_cuda.cpp  simple_add.cu
Lecture1_BareMetalSetup/: CMakeLists.txt
Lecture1_BareMetalSetup/doc/: zhCN.md
Lecture1_BareMetalSetup/src/: cuda_programming_model.cpp  vector_add.cu
Lecture2_Memory/: CMakeLists.txt
Lecture3_Kernel/: CMakeLists.txt
Lecture4_Abstractions/: CMakeLists.txt
Lecture5_Streams/: CMakeLists.txt
Lecture6_Warp/: CMakeLists.txt
Lecture7_SharedMemory/: CMakeLists.txt
Lecture8_WaveOpticsRenderer/: CMakeLists.txt
common/: CMakeLists.txt
common/include/: cuda_utils.h
